Removed cart icon and replaced with subscribe button. Also removed add to cart option and replaced it with download option. Andd added media query

--- a/src/libs/ui-common/grid-book/grid-book.component.html
+++ b/src/libs/ui-common/grid-book/grid-book.component.html
@@ -17,8 +17,8 @@
   </div>
   <div class="card_Actions">
     <button mat-icon-button color="primary">
-      <mat-icon>add_shopping_cart</mat-icon>
-      Add to Cart
+      <mat-icon>get_app</mat-icon>
+      Download
     </button>
     <button mat-icon-button color="primary"
             class="button_To_Add_In_Favorite"
