--- a/src/libs/ui-common/list-book/list-book.component.html
+++ b/src/libs/ui-common/list-book/list-book.component.html
@@ -12,8 +12,8 @@
                       [rating]="book?.rating"></eb-star-rating>
       <div class="div_To_Add_In_Cart">
           <button mat-icon-button color="primary" class="button_To_Add_In_Cart">
-            <mat-icon>add_shopping_cart</mat-icon>
-            Add to Cart
+            <mat-icon>get_app</mat-icon>
+            Download
           </button>
           <button mat-icon-button color="primary"
                   class="button_To_Add_In_Favorite"
