--- a/src/libs/ui-common/star-rating/star-rating.component.scss
+++ b/src/libs/ui-common/star-rating/star-rating.component.scss
@@ -23,5 +23,9 @@
       padding: 5 * $px;
       margin: -24px 0px 0px 9px;;
     }
+
+    .customer_Reviews_Link:hover {
+      color: #0654ba;
+    }
   }
 }
