--- a/src/libs/ui-global/action-bar/action-bar.component.html
+++ b/src/libs/ui-global/action-bar/action-bar.component.html
@@ -5,12 +5,8 @@
                       (change)="change_View($event)">
       List view
     </mat-slide-toggle>
-    <button mat-icon-button color="primary">
-      <mat-icon
-        class="md"
-        matBadge="{{itemsInTheCart}}"
-        matBadgeColor="warn"
-        matBadgeOverlap="false">shopping_cart</mat-icon>
+    <button class="subscription_Button">
+      Subscribe
     </button>
   </div>
 </div>
