--- a/src/libs/ui-global/action-bar/action-bar.component.scss
+++ b/src/libs/ui-global/action-bar/action-bar.component.scss
@@ -2,6 +2,15 @@
 @import 'src/styles/colors.scss';
 @import 'src/styles/global.scss';
 
+@media only screen and (min-device-width: 320px)
+ and (max-device-width: 480px) {
+   .actionbar {
+     display: flex;
+     flex-direction: column;
+     padding: 10 * $px 16 * $px;
+   }
+ }
+
 .actionbar {
   display: flex;
   justify-content: space-between;
@@ -24,6 +33,8 @@
   .actionbar_Actions {
     button {
       margin: 0 10 * $px 0 20 * $px;
+      padding: 7 * $px 10 * $px 7 * $px 10 * $px;
+      border-radius: 10%;
     }
   }
 }
